src/test/resources/typeSystemTestModels/invalid/names/InterfaceValidSuperTypes.java
package typeSystemTestModels.invalid.names;

import java.util.List;

public interface InterfaceValidSuperTypes extends List<String, Integer> {

}
